Thu Apr  5 15:26:59 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/transport/framework/DataLink.h:
        * dds/DCPS/transport/framework/DataLink.cpp:
        * dds/DCPS/transport/framework/DataLinkSet.h:
        * dds/DCPS/transport/framework/DataLinkSet.cpp:
        * dds/DCPS/transport/framework/TransportClient.cpp:

          Replaced DataLinkSetMap with the std::map that it used to
          contain.

        * dds/DCPS/transport/multicast/BestEffortSession.h:
        * dds/DCPS/transport/multicast/BestEffortSession.cpp:

          Removed unused check_header(const DataSampleHeader&).

        * dds/DCPS/transport/framework/DataLinkSetMap.h:
        * dds/DCPS/transport/framework/DataLinkSetMap.cpp:

          Removed these files.

Thu Apr  5 15:25:59 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * tools/scripts/lcov.pl:

          Fixed variable name.

Thu Apr  5 13:54:18 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/UnitTests/UnitTests.mpc:

          Added needed dependencies for InfoRepoDiscovery.

Thu Apr  5 09:33:18 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dds/DCPS/RTPS/RtpsInfo.cpp:
          Fixed argument not used warnings

Wed Apr  4 21:45:43 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/Discovery.h:
        * dds/DCPS/Discovery.cpp:
        * dds/DCPS/Service_Participant.h:
        * dds/DCPS/Service_Participant.cpp:
        * dds/DCPS/StaticIncludes.h:

          Allow dynamic loading of InfoRepoDiscovery in its own library.

        * dds/DCPS/InfoRepoDiscovery:
        * dds/DCPS/InfoRepoDiscovery/InfoRepoDiscovery.cpp:

          New library for InfoRepoDiscovery.

        * MPC/config/dcpsexe.mpb:

          Link the InfoRepoDiscovery library as well.  Needed for static builds.

        * dds/DCPS/RTPS/RtpsDiscovery.h:
        * dds/DCPS/RTPS/RtpsDiscovery.cpp:
        * dds/DCPS/RTPS/rtps.mpc:
